--- a/site/_includes/4.0/partials/topnav.html
+++ b/site/_includes/4.0/partials/topnav.html
@@ -9,22 +9,22 @@
   <nav class="navbar-collapse collapse order-last order-lg-unordered text-nowrap" id="cf-topnav" aria-label="Main">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a href="{{ site.path }}{{ pathVersion }}/get-started/quick-start/" class="nav-link {% if group == "get-started" %}active{% endif %}">Get Started{% if group == "get-started" %} <span class="sr-only">(current section)</span>{% endif %}</a>
+        <a href="{{ site.path }}{{ pathVersion }}/get-started/quick-start/" class="nav-link{% if group == "get-started" %} active" aria-current="true{% endif %}">Get Started</a>
       </li>
       <li class="nav-item">
-        <a href="{{ site.path }}{{ pathVersion }}/layout/overview/" class="nav-link {% if group == "layout" %}active{% endif %}">Layout{% if group == "layout" %} <span class="sr-only">(current section)</span>{% endif %}</a>
+        <a href="{{ site.path }}{{ pathVersion }}/layout/overview/" class="nav-link{% if group == "layout" %} active" aria-current="true{% endif %}">Layout</a>
       </li>
       <li class="nav-item">
-        <a href="{{ site.path }}{{ pathVersion }}/content/reboot/" class="nav-link {% if group == "content" %}active{% endif %}">Content{% if group == "content" %} <span class="sr-only">(current section)</span>{% endif %}</a>
+        <a href="{{ site.path }}{{ pathVersion }}/content/reboot/" class="nav-link{% if group == "content" %} active" aria-current="true{% endif %}">Content</a>
       </li>
       <li class="nav-item">
-        <a href="{{ site.path }}{{ pathVersion }}/components/alerts/" class="nav-link {% if group == "components" %}active{% endif %}">Components{% if group == "components" %} <span class="sr-only">(current section)</span>{% endif %}</a>
+        <a href="{{ site.path }}{{ pathVersion }}/components/alerts/" class="nav-link{% if group == "components" %} active" aria-current="true{% endif %}">Components</a>
       </li>
       <li class="nav-item">
-        <a href="{{ site.path }}{{ pathVersion }}/utilities/borders/" class="nav-link {% if group == "utilities" %}active{% endif %}">Utilities{% if group == "utilities" %} <span class="sr-only">(current section)</span>{% endif %}</a>
+        <a href="{{ site.path }}{{ pathVersion }}/utilities/borders/" class="nav-link{% if group == "utilities" %} active" aria-current="true{% endif %}">Utilities</a>
       </li>
       <li class="nav-item">
-        <a href="{{ site.path }}{{ pathVersion }}/widgets/overview/" class="nav-link {% if group == "widgets" %}active{% endif %}">Widgets{% if group == "widgets" %} <span class="sr-only">(current section)</span>{% endif %}</a>
+        <a href="{{ site.path }}{{ pathVersion }}/widgets/overview/" class="nav-link{% if group == "widgets" %} active" aria-current="true{% endif %}">Widgets</a>
       </li>
     </ul>
   </nav>
