Add version to page title

--- a/site/_includes/4.0/partials/head.html
+++ b/site/_includes/4.0/partials/head.html
@@ -20,7 +20,7 @@
   {%- if layout == "home" -%}
     {{ site.title }} - {{ site.description }}
   {%- else -%}
-    {{ title }} &#124; {{ site.title }}
+    {{ title }} &#124; {{ site.title }} v{{ version.docs }}
   {%- endif -%}
 </title>
 
