Fix skiplink z-index

--- a/site/assets/4.0/scss/_skiplink.scss
+++ b/site/assets/4.0/scss/_skiplink.scss
@@ -4,6 +4,7 @@
     position: absolute !important;
     top: .25rem;
     left: 50%;
+    z-index: 1200;
     padding: .25rem .5rem;
     color: $white;
     text-align: center;
