--- a/scss/mixins/_buttons.scss
+++ b/scss/mixins/_buttons.scss
@@ -4,6 +4,8 @@
 // and disabled options for all buttons
 
 @mixin button-variant($parent, $color, $bg, $border, $focus-shadow, $hover-color, $hover-bg, $hover-border, $active-color, $active-bg, $active-border) {
+    $extender: str-replace($parent, ".", "");
+
     #{$parent} {
         color: $color;
         background-color: $bg;
@@ -17,7 +19,7 @@
     }
 
     // Focus state
-    %btn-variant-#{$parent}-focus {
+    %btn-variant-#{$extender}-focus {
         // No mixin use, so feedback is always present
         @if $enable-shadows {
             box-shadow: $btn-box-shadow, $btn-focus-box-shadow-size rgba($focus-shadow, $btn-focus-box-shadow-alpha);
@@ -26,37 +28,37 @@
         }
     }
     #{$parent}:focus {
-        @extend %btn-variant-#{$parent}-focus;
+        @extend %btn-variant-#{$extender}-focus;
     }
     @if $enable-btn-check {
         .btn-check-input:focus ~ #{$parent} {
-            @extend %btn-variant-#{$parent}-focus;
+            @extend %btn-variant-#{$extender}-focus;
         }
     }
 
     // Disabled state
-    %btn-variant-#{$parent}-disable {
+    %btn-variant-#{$extender}-disable {
         color: $color;
         background-color: $bg;
         border-color: $border;
     }
     #{$parent}.disabled,
     #{$parent}:disabled {
-        @extend %btn-variant-#{$parent}-disable;
+        @extend %btn-variant-#{$extender}-disable;
     }
     @if $enable-btn-check {
         .btn-check-input {
             &[disabled],
             &:disabled {
                 ~ #{$parent} {
-                    @extend %btn-variant-#{$parent}-disable;
+                    @extend %btn-variant-#{$extender}-disable;
                 }
             }
         }
     }
 
     // Active state
-    %btn-variant-#{$parent}-active {
+    %btn-variant-#{$extender}-active {
         color: $active-color;
         background-color: $active-bg;
         border-color: $active-border;
@@ -64,11 +66,11 @@
     #{$parent}:active,
     #{$parent}.active,
     #{$parent}.open[data-cfw="dropdown"] {
-        @extend %btn-variant-#{$parent}-active;
+        @extend %btn-variant-#{$extender}-active;
     }
     @if $enable-btn-check {
         .btn-check-input:not([disabled]):not(:disabled):checked ~ #{$parent} {
-            @extend %btn-variant-#{$parent}-active;
+            @extend %btn-variant-#{$extender}-active;
         }
     }
 
