Dropdown alignment updates

--- a/scss/component/_caret.scss
+++ b/scss/component/_caret.scss
@@ -1,10 +1,19 @@
+%caret-base {
+    display: inline-block;
+    width: $caret-width;
+    text-align: center;
+}
+%caret-after {
+    @include caret(null, null);
+}
+
 @if $enable-utility-caret {
     .caret {
-        display: inline-block;
-        width: $caret-width;
-        text-align: center;
+        @extend %caret-base;
+
         &::after {
-            @include caret(down, $caret-border-width);
+            @extend %caret-after;
+            @include caret-down($caret-border-width);
         }
     }
     .open .caret {
@@ -12,4 +21,47 @@
             @include caret-up($caret-border-width);
         }
     }
+
+    .caretup {
+        @extend %caret-base;
+
+        &::after {
+            @extend %caret-after;
+            @include caret-up($caret-border-width);
+        }
+    }
+    .open .caretup {
+        &::after {
+            @include caret-down($caret-border-width);
+        }
+    }
+
+    .caretstart {
+        @extend %caret-base;
+
+        &::after {
+            @extend %caret-after;
+            @include caret-start($caret-border-width);
+        }
+    }
+    .open .caretstart {
+        &::after {
+            @include caret-end($caret-border-width);
+        }
+    }
+
+    .caretend {
+        @extend %caret-base;
+
+        &::after {
+            @extend %caret-after;
+            @include caret-end($caret-border-width);
+        }
+    }
+    .open .caretend {
+        &::after {
+            @include caret-start($caret-border-width);
+        }
+    }
 }
+
